Bug 2068632 - Set mDefaultSelectionSet for non-parser-created selects r=emilio

Bug 2038588, replaced `TrySelectSomething`, so that option selectedness is only
dirty via `OnSelectionChanged`. `OnSelectionChanged` returns early unless
`mDefaultSelectionSet` is set, and only `DoneAddingChildren` sets it.
This means it never runs for a select built by script. Removing the last
unselected option from such a combobox, or resetting its form, re-selects the
first enabled option but leaves `selectedOptions` stale.

This change moves to initialise `mIsDoneAddingChildren` in the constructor. It's
already set when the select is not parser-created. The result is that the early
return is skipped, allowing the selected option list to become dirty.

Differential Revision: https://phabricator.services.mozilla.com/D323244